--- a/packages/geofire/tsconfig.json
+++ b/packages/geofire/tsconfig.json
@@ -14,7 +14,8 @@
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
+    "strict": true
   },
   "include": [
     "src"
